# applications-menu

./: .travis.yml  =  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  io.elementary.desktop.wingpanel.applications-menu.gschema.xml  meson.build  meson_options.txt  org.elementary.slingshot.gschema.xml  org.pantheon.desktop.slingshot.gschema.xml  org.pantheon.slingshot.gschema.xml
.github/workflows/: githubci.yml
data/: AppButton.css  PageChecker.css  applications-menu.appdata.xml.in  applications-menu.css  applications-menu.metainfo.xml.in  icons.gresource.xml  io.elementary.desktop.wingpanel.applications-menu.gschema.xml  meson.build  pantheon-applications.menu
data/style/: app.css  default.css  switcher.css
debian/: changelog  control  copyright  rules  slingshot-launcher.1  slingshot-launcher.install  slingshot-launcher.manpages  watch
lib/: meson.build
lib/synapse-core/: CMakeLists.txt  common-actions.vala  config-service.vala  config.h.in  data-sink.vala  dbus-service.vala  desktop-file-service.vala  match.vala  meson.build  plugin.vala  query.vala  relevancy-backend-zg.vala  relevancy-service.vala  result-set.vala  utils.vala  volume-service.vala
lib/synapse-plugins/: CMakeLists.txt  appcenter-plugin.vala  banshee-plugin.vala  calculator-plugin.vala  chat-actions-plugin.vala  chromium-plugin.vala  command-plugin.vala  contractor-plugin.vala  conversion-plugin.vala  desktop-file-plugin.vala  devhelp-search.vala  dictionary.vala  directory-plugin.vala  file-op-plugin.vala  gnome-screensaver-plugin.vala  gnome-session-plugin.vala  hello-world-plugin.vala  hybrid-search-plugin.vala  imgur-plugin.vala  launchpad-plugin.vala  link-plugin.vala  locate-plugin.vala  meson.build  opensearch.vala  pastebin-plugin.vala  pidgin-plugin.vala  rhythmbox-plugin.vala  searchengine-plugin.vala  selection-plugin.vala  ssh-plugin.vala  switchboard-plugin.vala  system-management.vala  system-managment.vala  telepathy-plugin.vala  test-slow-plugin.vala  user-search.vala  web-plugin.vala  window-switcher-plugin.vala  wolframalpha-plugin.vala  xnoise-media-player-plugin.vala  (+2 more)
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  af.po  ak.po  am.po  ar.po  as.po  ast.po  av.po  az.po  be.po  bg.po  bi.po  bn.po  bs.po  ca.po  ca@valencia.po  ch.po  ckb.po  cs.po  cu.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  en_ZA.po  eo.po  es.po  et.po  eu.po  fa.po  ff.po  fi.po  fil.po  fo.po  (+87 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
src/: CMakeLists.txt  Indicator.vala  Pixels.vala  Settings.vala  Slingshot.vala  SlingshotView.vala  Utils.vala  meson.build  settings.ui
src/Backend/: .goutputstream-UWXQW0  App.vala  AppAction.vala  AppCenter.vala  AppMonitor.vala  AppSystem.vala  Category.vala  DBusService.vala  DataSink.vala  Dock.vala  GMenuEntries.vala  Match.vala  RelevancyBackendZg.vala  RelevancyService.vala  SwitcherooControl.vala  SynapseSearch.vala  Unity.vala
src/Views/: CategoryView.vala  GridView.vala  QuickActionsConfigurationView.vala  QuickActionsView.vala  SearchView.vala
src/Widgets/: App.vala  AppButton.vala  AppContextMenu.vala  AppEntry.vala  AppIcon.vala  AppListBox.vala  AppListRow.vala  AppMenu.vala  CategoryView.vala  ComboBox.vala  FavoritesSidebar.vala  Grid.vala  Indicators.vala  LargeSearchEntry.vala  MenuIcon.vala  PageChecker.vala  PopoverMenu.vala  SearchEntry.vala  SearchItem.vala  SearchView.vala  Searchbar.vala  Sidebar.vala  Slider.vala  Switcher.vala  powerstrip.vala
src/synapse-core/: common-actions.vala  data-sink.vala  desktop-file-service.vala  relevancy-backend-zg.vala  utils.vala
src/synapse-core/Actions/: BaseAction.vala  ClipboardCopyAction.vala  CommonAction.vala  OpenFolderAction.vala  OpenerAction.vala  RunnerAction.vala  TerminalRunnerAction.vala
src/synapse-core/Matches/: ContactMatch.vala  DefaultMatch.vala  ExtendedInfo.vala  Match.vala  TextMatch.vala
src/synapse-plugins/: appcenter-plugin.vala  calculator-plugin.vala  command-plugin.vala  converter-plugin.vala  desktop-file-plugin.vala  file-bookmarks-plugin.vala  link-plugin.vala  switchboard-plugin.vala  system-managment.vala  worker-link.vala
src/synapse-plugins/calculator-plugin/: calculator-plugin-backend.vala  calculator-plugin.vala
src/synapse-plugins/converter-plugin/: converter-data.vala  converter-plugin-backend.vala  converter-plugin.vala
src/synapse-plugins/switchboard-plugin/: plugin.vala
src/test/: CalculatorPluginTest.vala  ConverterPluginTest.vala  PluginTest.vala  meson.build
vapi/: config.vapi
